--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: libr
 Type: Package
 Title: Create Data Libraries and Dictionaries
-Version: 0.0.9001
+Version: 0.0.9002
 Author: David J. Bosak
 Maintainer: David Bosak <dbosak01@gmail.com>
 Description: Contains a set of functions to create data libraries
@@ -11,6 +11,7 @@ Description: Contains a set of functions to create data libraries
     will generate data dictionaries for individual
     data frames/tibbles or an entire library.
 License: CC0
+Depends: R (>= 3.5.0)
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/dbosak01/libr
