--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,15 +5,18 @@ S3method(print,lib)
 export(as.lib)
 export(dictionary)
 export(is.lib)
-export(lib.append)
-export(lib.copy)
-export(lib.create)
-export(lib.delete)
-export(lib.info)
-export(lib.path)
-export(lib.remove)
-export(lib.size)
-export(lib.write)
+export(lib_append)
+export(lib_copy)
+export(lib_create)
+export(lib_delete)
+export(lib_info)
+export(lib_load)
+export(lib_path)
+export(lib_remove)
+export(lib_size)
+export(lib_unload)
+export(lib_write)
 export(libname)
 import(haven)
 import(readxl)
+import(utils)
