--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(lib_load)
 export(lib_path)
 export(lib_remove)
 export(lib_size)
+export(lib_sync)
 export(lib_unload)
 export(lib_write)
 export(libname)
