--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: libr
 Type: Package
 Title: Create Data Libraries and Dictionaries
-Version: 0.0.9002
+Version: 0.0.9003
 Author: David J. Bosak
 Maintainer: David Bosak <dbosak01@gmail.com>
 Description: Contains a set of functions to create data libraries
@@ -21,6 +21,7 @@ Suggests:
     knitr,
     rmarkdown
 Imports: tibble,
+         readr,
          readxl,
          haven
 RoxygenNote: 7.1.1
