--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(lib_append)
 export(lib_copy)
 export(lib_create)
 export(lib_delete)
+export(lib_environment)
 export(lib_info)
 export(lib_load)
 export(lib_path)
