Write function working, but check is failing on java installation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 S3method(print,lib)
 export(dictionary)
 export(is.lib)
-export(lib_append)
+export(lib_add)
 export(lib_copy)
 export(lib_create)
 export(lib_delete)
@@ -22,3 +22,4 @@ import(readr)
 import(readxl)
 import(tibble)
 import(utils)
+import(xlsx)
