--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: libr
 Type: Package
 Title: Create Data Libraries and Dictionaries
-Version: 0.0.9003
+Version: 0.0.9004
 Author: David J. Bosak
 Maintainer: David Bosak <dbosak01@gmail.com>
 Description: Contains a set of functions to create data libraries
@@ -23,6 +23,7 @@ Suggests:
 Imports: tibble,
          readr,
          readxl,
-         haven
+         haven,
+         xlsx
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
