Copy error and coloring #11 and #12

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: libr
 Type: Package
 Title: Create Data Libraries and Dictionaries
-Version: 0.0.9004
+Version: 0.0.9005
 Author: David J. Bosak
 Maintainer: David Bosak <dbosak01@gmail.com>
 Description: Contains a set of functions to create data libraries
@@ -24,6 +24,7 @@ Imports: tibble,
          readr,
          readxl,
          haven,
-         openxlsx
+         openxlsx,
+         crayon
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
