--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(lib_sync)
 export(lib_unload)
 export(lib_write)
 export(libname)
+import(crayon)
 import(haven)
 import(readr)
 import(readxl)
