--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(lib_info)
 export(lib_load)
 export(lib_path)
 export(lib_remove)
+export(lib_replace)
 export(lib_size)
 export(lib_sync)
 export(lib_unload)
