Examples for datastep

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Suggests:
     testthat,
     knitr,
     rmarkdown,
-    foreign
+    foreign,
+    magrittr
 Imports:     
     readr,
     readxl,
