Ready to start logr integration.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,9 @@ Suggests:
     knitr,
     rmarkdown,
     foreign,
-    magrittr
+    magrittr,
+    utils,
+    logr
 Imports:     
     readr,
     readxl,
