Fixed bug #93 and added attrib parameter #73

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export("%eq%")
 export(datastep)
 export(dictionary)
 export(dsarray)
+export(dsattr)
 export(import_spec)
 export(is.lib)
 export(lib_add)
