More documentation updates #94

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,8 @@ Imports:
     dplyr,
     tibble,
     tools,
-    Rcpp
+    Rcpp,
+    data.table
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
 LinkingTo: 
