--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: libr
 Type: Package
 Title: Libraries, Data Dictionaries, and a Data Step for R
-Version: 1.2.0
+Version: 1.2.1
 Author: David J. Bosak
 Maintainer: David Bosak <dbosak01@gmail.com>
 Description: Contains a set of functions to create data libraries,
@@ -23,7 +23,8 @@ Suggests:
     foreign,
     magrittr,
     utils,
-    logr
+    logr,
+    covr
 Imports: 
     readr,
     readxl,
