--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,9 +6,12 @@ articles:
   libr-datastep: libr-datastep.html
   libr-disclaimer: libr-disclaimer.html
   libr-eq: libr-eq.html
+  libr-example1: libr-example1.html
+  libr-example2: libr-example2.html
+  libr-faq: libr-faq.html
   libr-management: libr-management.html
   libr: libr.html
-last_built: 2021-10-09T19:16Z
+last_built: 2021-11-21T04:20Z
 urls:
   reference: https://libr.r-sassy.org/reference
   article: https://libr.r-sassy.org/articles
