--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(length,dsarray)
 S3method(print,lib)
 S3method(print,specs)
 export(datastep)
+export(delete)
 export(dictionary)
 export(dsarray)
 export(dsattr)
