Output function #118 and #135

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(lib_sync)
 export(lib_unload)
 export(lib_write)
 export(libname)
+export(output)
 export(read.specs)
 export(specs)
 export(write.specs)
