--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,8 +37,9 @@ Imports:
     tibble,
     tools,
     Rcpp,
-    data.table
-RoxygenNote: 7.3.1
+    data.table,
+    nanoparquet
+RoxygenNote: 7.3.2
 VignetteBuilder: knitr
 LinkingTo: 
     Rcpp
