--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,11 @@ Title: Libraries, Data Dictionaries, and a Data Step for R
 Version: 1.3.5
 Author: David J. Bosak
 Maintainer: David Bosak <dbosak01@gmail.com>
+Authors@R: c( 
+    person("David", "Bosak", email = "dbosak01@gmail.com", role = c("aut", "cre")),
+    person("Brian", "Varney", email = "brian.varney@experis.com", role = "ctb"),
+    person("Archytas Clinical Solutions", role = "cph")
+    )
 Description: Contains a set of functions to create data libraries,
     generate data dictionaries, and simulate a data step.
     The libname() function will load a directory of data into 
