--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: libr
 Type: Package
 Title: Libraries, Data Dictionaries, and a Data Step for R
-Version: 1.3.7
+Version: 1.3.8
 Maintainer: David Bosak <dbosak01@gmail.com>
 Authors@R: c( 
     person("David", "Bosak", email = "dbosak01@gmail.com", role = c("aut", "cre")),
@@ -30,7 +30,8 @@ Suggests:
     utils,
     logr,
     covr,
-    fmtr
+    fmtr,
+    nanoparquet
 Imports: 
     readr,
     readxl,
@@ -41,8 +42,7 @@ Imports:
     tibble,
     tools,
     Rcpp,
-    data.table,
-    nanoparquet
+    data.table
 RoxygenNote: 7.3.2
 VignetteBuilder: knitr
 LinkingTo: 
